--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@capacitor-community/sunmi-card-reader",
-  "version": "0.0.1",
+  "name": "sunmi-card-reader",
+  "version": "1.0.0",
   "description": "This is a plugin to integrate with sunmi payment SDK and work with the NFC card reader",
   "main": "dist/plugin.cjs.js",
   "module": "dist/esm/index.js",
